ensure no warnings are emitted in spring starter startup (#11201)